HOMEB-31 : Calculate Election (#7)